--- a/my-app/src/App.module.css
+++ b/my-app/src/App.module.css
@@ -11,7 +11,7 @@ a {
 .App {
     display: grid;
     grid-template-rows: 60px auto 50px;
-    grid-template-columns: 230px 1fr;
+    /* grid-template-columns: 230px 1fr; */
     column-gap: 0.5rem;
     row-gap: 0.5rem;
     text-align: center;
